general template improvements

--- a/config/locales/models.pt-BR.yml
+++ b/config/locales/models.pt-BR.yml
@@ -3,3 +3,9 @@ pt-BR:
     attributes:
       user:
         name: Nome
+      book:
+        title: Título
+        description: Descrição
+        image_url: URL da capa
+        page_count: Quantiade de páginas
+        author: Autor
